--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -2,13 +2,12 @@
 <layout version="0.1.0">
 
 <default>
-
 <reference name="head">
  <action method="addCss"><stylesheet>jquery.mCustomScrollbar.css</stylesheet></action>
   <action method="addItem"><type>skin_js</type><script>js/jquery.main.js</script></action>
   <action method="addItem"><type>skin_js</type><script>js/jquery.custom.js</script></action>
   <action method="addItem"><type>skin_js</type><script>js/jquery.mCustomScrollbar.js</script></action>
-	<action method="addItem"><type>skin_js</type><script>bootstrap/js/bootstrap.min.js</script></action>
+<action method="addItem"><type>skin_js</type><script>bootstrap/js/bootstrap.min.js</script></action>
    <action method="addCss"><stylesheet>bootstrap/css/bootstrap.css</stylesheet></action> 
    <action method="addCss"><stylesheet>style.css</stylesheet></action>
   <action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
@@ -46,9 +45,13 @@
 		</block>-->
 		<block type="customer/form_login" name="customer_form_login"  before="footer_store_language" template="customer/form/loginpopup.phtml" />
 	 </reference>
-	 
 </default>
 
+<STORE_creo_ar>
+        <reference name="head">
+            <action method="addCss"><stylesheet>css/style-ar.css</stylesheet><params>media="screen"</params></action>
+        </reference>
+</STORE_creo_ar>
 
 <cms_index_index>
 	
