Seo Document sugested changes

--- a/app/design/frontend/base/default/template/page/switch/languages.phtml
+++ b/app/design/frontend/base/default/template/page/switch/languages.phtml
@@ -33,8 +33,8 @@
 ?>
 <?php if(count($this->getStores())>1): ?>
 <!-- <div class="form-language"> -->
-    <label for="select-language"><?php echo $this->__('Language:') ?></label>
-    <select id="select-language" title="<?php echo $this->__('Language') ?>" onchange="window.location.href=this.value">
+    <!-- <label class="lang" for="select-language"><?php //echo $this->__('Language:') ?></label> -->
+    <select class="opener" id="select-language" title="<?php echo $this->__('Language') ?>" onchange="window.location.href=this.value">
     <?php foreach ($this->getStores() as $_lang): ?>
         <?php $_selected = ($_lang->getId() == $this->getCurrentStoreId()) ? ' selected="selected"' : '' ?>
         <option value="<?php echo $_lang->getCurrentUrl() ?>"<?php echo $_selected ?>><?php echo $this->escapeHtml($_lang->getName()) ?></option>
