Sa Arabic locale replaced with cleen one

--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -192,8 +192,7 @@ padding: 0;
 .in-stock span {
 color: #3ebd00;
 }
-.availability p.availability {
-width: 75px;
+.availability p.availability {/*width: 75px;*/
 text-align: left;
 margin-left: 6px;
 }
