--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -440,7 +440,7 @@ p.style1 {
 	margin: 0 0px 0 0;
 	padding:0px;
 }
-#nav ol > li > a {	display: block;padding: 0 10px 5px;font-size:14px;position: relative;cursor: pointer;}
+#nav ol > li > a {	display: block;padding: 0 10px 5px;font-size:13px;position: relative;cursor: pointer;}
 #nav ol > li a:hover { text-decoration: none; }
 #nav ol > li > a:after {
 	bottom: -2px;
@@ -716,7 +716,7 @@ p.style1 {
 #header .login-area .opener {
 	display: inline-block;
 	vertical-align: middle;
-	padding: 0 25px;
+	padding: 0 20px;
 	position: relative;
 	color: #222;
 	font: 12px/19px "Roboto Condensed", Helvetica, Arial, sans-serif;
@@ -729,8 +729,8 @@ p.style1 {
 }
 #header .login-area .opener:before {
 	position: absolute;
-	top: 0;
-	left: 9px;
+	top:0;
+	left:0px;
 	content: '\e808';
 	color: #f16167;
 	font-size: 12px;
@@ -775,8 +775,9 @@ p.style1 {
 	display: inline-block;
 	vertical-align: top;
 	position: relative;
-	margin: 2px 5px 0 0;
+	margin:0;
 }
+#header .basic-open-close:first-child{margin-right:15px;}
 #header .basic-open-close .opener {
 	display: inline-block;
 	vertical-align: middle;
@@ -802,33 +803,28 @@ p.style1 {
 	right: -10px;
 	content: '\e812';
 }
-.opener#select-language{width:auto;height:auto;border:0;font-size:12px;background-color:#fff;position:relative;}
-.opener#select-language+i:before{font-family: 'fontello';font-size:8px;line-height:2;width:12px;height:12px;position:absolute;
-top:1px;right:6px;z-index: 99999;content: '\e812';background-color: #fff;text-align: center;}
-.opener#select-language:hover+i:before,.opener#select-language:focus+i:before{background-color:#f5f5f5;}
+#select-language label{display:inline-block;padding:5px 10px;font-size:12px;text-transform:uppercase;vertical-align: top;margin:0;
+text-align:center;background-color:#000;color:#fff;text-decoration: none;cursor:pointer;}
+#select-language label:hover,#select-language label.selected{background-color:#ef4f61;}
+#select-language label input[type="radio"]{display:none;margin:0;}
+#select-language label.selected{/*display:none;*/}
+
 #header label.lang{margin:0;padding:0;}
 #header .basic-open-close ul {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	background: #fff;
-	min-width: 99px;
+	min-width:70px;
 	text-align: center;
 	position: absolute;
 	text-transform: uppercase;
 	box-shadow: 0 1px 2px #ccc;
 	font: 10px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
+	right:-70%;
 }
-#header .basic-open-close li a {
-	display: block;
-	color: #666;
-	padding: 5px 10px;
-}
-#header .basic-open-close li a:hover {
-	color: #fff;
-	background: #000;
-	text-decoration: none;
-}
+#header .basic-open-close li a {display:block;color: #666;padding:5px 2px;}
+#header .basic-open-close li a:hover {color: #fff;background: #000;text-decoration: none;}
 /* carousel basic styles */
 .carousel-creo.home {
 	position: relative;
