--- a/app/design/frontend/creo/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view.phtml
@@ -62,35 +62,35 @@ if($_product->stock_item->is_in_stock == 0){
                             <!-- tabs structure example -->
                             <div class="tabs-cont">
                                 <ul class="tabset tabset1">
-                                    <li class="active"><a href="#tab1"><span><?php echo $attribute = $_product->getResource()->getAttribute('description')->getFrontendLabel(); ?></span></a></li>
-                                    <li class=""><a href="#tab2"><span><?php echo $attribute = $_product->getResource()->getAttribute('short_description')->getFrontendLabel(); ?></span></a></li>
-                                    <li class=""><a href="#tab3"><span><?php echo $attribute = $_product->getResource()->getAttribute('design')->getFrontendLabel(); ?></span></a></li>
+                                    <li class="active"><a href="#tab1"><span><?php echo $attribute = $this->__($_product->getResource()->getAttribute('description')->getFrontendLabel()); ?></span></a></li>
+                                    <li class=""><a href="#tab2"><span><?php echo $attribute = $this->__($_product->getResource()->getAttribute('short_description')->getFrontendLabel()); ?></span></a></li>
+                                    <li class=""><a href="#tab3"><span><?php echo $attribute = $this->__($_product->getResource()->getAttribute('design')->getFrontendLabel()); ?></span></a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div id="tab1" style="display: block;" class="">
-                                        <p><?php print $_product->getDescription(); ?> </p>
+                                        <p><?php print $this->__($_product->getDescription()); ?> </p>
                                     </div>
                                     <div id="tab2" style="display: none; width: 715px;" class="js-tab-hidden">
-                                        <p><?php print $_product->getShortDescription(); ?> </p>
+                                        <p><?php print $this->__($_product->getShortDescription()); ?> </p>
                                     </div>
                                     <div id="tab3" style="display: none; width: 715px;" class="js-tab-hidden">
-                                        <p><?php print $_product->getDesign(); ?> </p>
+                                        <p><?php print $this->__($_product->getDesign()); ?> </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div> 
+                    </div>
                     <div class="text-area col-lg-6 col-xs-12">
-                        <h2><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h2>
-                        <div class="price-area"> 
+                        <h2><?php echo $this->__($_helper->productAttribute($_product, $_product->getName(), 'name')) ?></h2>
+                        <div class="price-area">
                             <span class="price">
                                 <?php if($_product->getSpecialPrice() > 0.0):?>
                                     <i class="old-price"><?php echo Mage::helper('core')->currency($_product->getSpecialPrice(), true, false); ?></i> 
                                 <?php endif;?>
                                 <?php echo $_formattedSpecialPrice = Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
-                            <span class="availability">Availability:  
-                                <?php echo $this->getChildHtml('product_type_availability'); ?>
-                            </span> 
+                            <span class="availability"><?php echo $this->__('Availability'); ?>:
+                                <?php echo $this->__($this->getChildHtml('product_type_availability')); ?>
+                            </span>
                         </div>
                         <div class="options-area">
                             <?php if ($_product->isSaleable()): ?>
@@ -110,7 +110,7 @@ if($_product->stock_item->is_in_stock == 0){
                     </div>
                 </div>
                 <div class="text-area">
-                    <h2><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h2>
+                    <h2><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?></h2>
                     <div class="price-area"> 
 <div class="price-info">
 <?php /*?><?php if($_product->getSpecialPrice() > 0.0):?>
@@ -123,24 +123,24 @@ if($_product->stock_item->is_in_stock == 0){
 <?php echo $this->getTierPriceHtml() ?>
 
  </div>
-<span class="availability">Availability: <?php echo $this->getChildHtml('product_type_availability'); ?></span>
+<span class="availability"><?php echo $this->__('Availability'); ?>: <?php echo $this->__($this->getChildHtml('product_type_availability')); ?></span>
 </div>
 
 <!-- tabs structure example -->
 <ul class="tabset tabset1">
     <li class="active"><a href="#tab1"><span>
-                <?php echo $attribute = $_product->getResource()->getAttribute('description')->getFrontendLabel(); ?></span></a></li>
-    <li class=""><a href="#tab2"><span><?php echo $attribute = $_product->getResource()->getAttribute('design')->getFrontendLabel(); ?></span></a></li>
+                <?php echo $attribute = $this->__($_product->getResource()->getAttribute('description')->getFrontendLabel()); ?></span></a></li>
+    <li class=""><a href="#tab2"><span><?php echo $attribute = $this->__($_product->getResource()->getAttribute('design')->getFrontendLabel()); ?></span></a></li>
 </ul>
 <div class="tab-content">
     <div id="tab1" style="display: block;" class="">
-        <p><?php print $_product->getDescription(); ?> </p>
+        <p><?php print $this->__($_product->getDescription()); ?> </p>
     </div>
     <div id="tab2" style="display: none; width: 715px;" class="js-tab-hidden">
-        <p><?php print $_product->getDesign(); ?> </p>
+        <p><?php print $this->__($_product->getDesign()); ?> </p>
     </div>
 </div>
-<a href="#" class="sizeguide_link" data-toggle="modal" data-target="#sizeGuide"><span>SIZE GUIDE
+<a href="#" class="sizeguide_link" data-toggle="modal" data-target="#sizeGuide"><span><?php echo $this->__('SIZE GUIDE'); ?>
 <?php //echo $attribute = $_product->getResource()->getAttribute('short_description')->getFrontendLabel(); ?></span></a>
 <!-- Modal -->
 <div class="modal fade" id="sizeGuide" tabindex="-1" role="dialog">
@@ -173,13 +173,12 @@ if($_product->stock_item->is_in_stock == 0){
                         <?php endif; ?>
                     </div>
                     <?php  if(!$_product->isSaleable()): ?>
-						<?php echo $this->getChildHtml('addto') ?>                      
+                        <?php echo $this->__($this->getChildHtml('addto')); ?>
                       <?php endif; ?>
 
-
                     <?php // jawwad.nissar work starts  ?>
-                    <div class="shipping-area"> 
-                        <h4 st> Shipping Information  </h4>
+                    <div class="shipping-area">
+                        <h4><?php echo $this->__('Shipping Information'); ?>  </h4>
                         <!--<a class="shipping-info" href="#">Shipping Information</a>-->
                         <p><?php print $_product->getShippingDetails(); ?> </p>
                     </div> 
