--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -26,3 +26,4 @@ footer#footer{direction:rtl;}
 #nav .links-area .links{text-align:right;}
 .product-detail .price-area .availability{float:left;}
 .catalog-product-view .text-area .qty-area label{display:block;}
+#last_most_view_box_sub{direction:ltr;}
