--- a/app/design/frontend/creo/default/template/extensions/sellers/newcollection.phtml
+++ b/app/design/frontend/creo/default/template/extensions/sellers/newcollection.phtml
@@ -41,9 +41,9 @@ $currentCat = $_productCollection->getFirstItem()->cat_name;
 <div class="col-xs-12">
 <nav class="breadcrumb1">
     <ul>
-        <li class="home"><a title="Go to Home Page" href="<?php echo Mage::getBaseUrl(); ?>">Home</a></li>
-        <li class="category3"><a title="Collections" href="<?php echo Mage::getBaseUrl() . strtolower($_categoryLabel) . ".html" ?>"><?php echo $_categoryLabel ?></a></li>
-        <li class="category17"><strong>New</strong></li>
+    <li class="home"><a title="Go to Home Page" href="<?php echo Mage::getBaseUrl(); ?>"><?php echo $this->__('Home'); ?></a></li>
+    <li class="category3"><a title="Collections" href="<?php echo Mage::getBaseUrl() . strtolower($_categoryLabel) . ".html" ?>"><?php echo $this->__($_categoryLabel); ?></a></li>
+        <li class="category17"><strong><?php echo $this->__('New'); ?></strong></li>
     </ul>
 </nav>
 </div>
@@ -52,7 +52,7 @@ $currentCat = $_productCollection->getFirstItem()->cat_name;
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
-    <h2 class="cph">New Collection</h2>
+    <h2 class="cph"><?php echo $this->__('New Collection'); ?></h2>
     <?php echo $this->getToolbarHtml() ?>
         <?php // List mode  ?>
         <?php if ($this->getMode() != 'grid'): ?>
@@ -62,18 +62,18 @@ $currentCat = $_productCollection->getFirstItem()->cat_name;
                     <li class="item<?php if (($i - 1) % $_columnCount == 0): ?> first<?php elseif ($i % $_columnCount == 0): ?> last<?php endif; ?>">
                         <div class="list_product_img">
                             <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" />
-                                <a  rel="nofollow" href="<?php echo Mage::getBaseUrl() . 'quickview/index/view?pid=' . $_product->getId(); ?>" data-fancybox-type="iframe" class="mp_quickview_icon" id="mp_quickview_<?php echo $_product->getId() ?>"> <span class="quick-view"><i class="icon-search"></i> quick view</span></a>
+                                <a  rel="nofollow" href="<?php echo Mage::getBaseUrl() . 'quickview/index/view?pid=' . $_product->getId(); ?>" data-fancybox-type="iframe" class="mp_quickview_icon" id="mp_quickview_<?php echo $_product->getId() ?>"> <span class="quick-view"><i class="icon-search"></i> <?php echo $this->__('quick view'); ?></span></a>
                             </a>
                         </div>
                         <div class="text-area">
-                            <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
+                            <h3 class="product_name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $this->__($_helper->productAttribute($_product, $_product->getName(), 'name')); ?></a></h3>
                             <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
 
                             <div class="btn-holder"> 
             <?php if ($this->helper('wishlist')->isAllow()) : ?>
                                     <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a> 
                                 <?php endif; ?>
-                                <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a> 
+                                <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__('Add to Cart') ?> </a> 
                             </div>
 
                             <div class="description">
@@ -136,9 +136,9 @@ $currentCat = $_productCollection->getFirstItem()->cat_name;
 
                         <a  href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(480, 650); ?>" width="414" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), true, true) ?>" />
                         </a>
-                        <a  rel="nofollow" href="<?php echo Mage::getBaseUrl() . 'quickview/index/view?pid=' . $_product->getId(); ?>" data-fancybox-type="iframe" class="mp_quickview_icon" id="mp_quickview_<?php echo $_product->getId() ?>"> <span class="quick-view"><i class="icon-search"></i> quick view</span></a>
+                        <a  rel="nofollow" href="<?php echo Mage::getBaseUrl() . 'quickview/index/view?pid=' . $_product->getId(); ?>" data-fancybox-type="iframe" class="mp_quickview_icon" id="mp_quickview_<?php echo $_product->getId() ?>"> <span class="quick-view"><i class="icon-search"></i> <?php echo $this->__('quick view'); ?></span></a>
                         <div class="text-area">
-                            <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a></h3>
+                            <h3 class="product_name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $this->__($_helper->productAttribute($_product, $_product->getName(), 'name')); ?></a></h3>
                             <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
 
                             <div class="btn-holder"> 
@@ -146,17 +146,13 @@ $currentCat = $_productCollection->getFirstItem()->cat_name;
                                     <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a> 
                                 <?php endif; ?>
                                 <?php //if (!($_product->getTypeInstance(true)->hasRequiredOptions($_product) || $_product->isGrouped())) { ?>
-                                    <!--<a href="javascript:;" onclick="setLocationAjax('<?php echo $this->getAddToCartUrl($_product) ?>', '<?php echo $_product->getId() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>-->
+                                    <!--<a href="javascript:;" onclick="setLocationAjax('<?php echo $this->getAddToCartUrl($_product) ?>', '<?php echo $_product->getId() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__('Add to Cart') ?> </a>-->
                                 <?php //} else { ?>
                                 <?php if($_product->isConfigurable()){ ?> 
-                                <a href="javascript:;" onclick="setLocation('<?php echo $_product->getProductUrl() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
-                                <?php
-								}else{
-								?>
-                                    <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__(' Add to Cart') ?> </a>
-                                    <?php
-								}
-									?>
+                                <a href="javascript:;" onclick="setLocation('<?php echo $_product->getProductUrl() ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__('Add to Cart') ?> </a>
+                                <?php }else{ ?>
+                                    <a href="javascript:;" onclick="setLocation('<?php echo $this->helper('checkout/cart')->getAddUrl($_product) ?>')" class="btn-cart"><i class="icon-basket"></i><?php echo $this->__('Add to Cart') ?> </a>
+                                    <?php } ?>
                                 <?php //} ?>
 
                             </div>
@@ -171,9 +167,8 @@ $currentCat = $_productCollection->getFirstItem()->cat_name;
 
         <div class="toolbar-bottom">
             <?php //echo $this->getToolbarHtml() ;
-			
-				echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;
-			?>
+            echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;
+	?>
         </div>
     </div>
 <?php endif; ?>
