--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -22,7 +22,8 @@ footer#footer{direction:rtl;}
 #footer .column.column1{width:auto;}
 .product-detail .btn-holder button:first-child .span1{margin-left:0;margin-right:10px;}
 .products-grid .btn-holder a:first-child .span1{margin-left:0;margin-right:-10px;}
-.category--heading span:before{border-color: transparent #000 transparent #000;border-width: 30px 6px 0 0px;left:inherit;right:100%;}
+.category--heading span:before,.shipping-methods h3 span:before, #last_most_view_title > h3 span:before{
+border-color: transparent #000 transparent #000;border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 .toolbar .sort-by select, .category_top_filters .sort-by select{font-size:12px;}
 #nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question{text-align:right;}
 .product-detail .price-area .availability{float:left;}
