--- a/app/design/frontend/creo/default/template/persistent/customer/form/register.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/register.phtml
@@ -33,7 +33,7 @@
 /** @var $this Mage_Customer_Block_Form_Register */
 ?>
 
-<div class="col col-lg-6 col-md-6 col-sm-6 col-xs-12 form-holder login-sec no-padding-right">
+<div class="col col-lg-6 col-md-6 col-sm-6 col-xs-12 form-holder login-sec">
         <h3><?php echo $this->__('NEW CUSTOMERS') ?></h3>
           <div class="form-frame reg-form">
     <?php echo $this->getChildHtml('form_fields_before')?>
@@ -43,15 +43,12 @@
 	if(strpos($urlString,'login') == false) {
     echo $this->getMessagesBlock()->toHtml();
 	}
-	?>		
-	
-   
+	?>
     <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="form-validate" class="signup-form" enctype="multipart/form-data">
-        
             <input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
             <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
             <?php /*?><p class="form-instructions"><?php echo $this->__('Please enter the following information to create your account.') ?></p><?php */?>
-            
+
                     <?php echo $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getFormData())->setForceUseCustomerAttributes(true)->toHtml() ?>
                     <label for="email_address" class="required"><em class="red marg-right">*</em><?php echo $this->__('Email Address') ?></label>
                     <div class="input-box">
@@ -185,4 +182,5 @@
     //]]>
     </script>
 
+</div>
 </div>
