--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -14,21 +14,33 @@ footer#footer{direction:rtl;}
 #header .header-icons{right:inherit;left:112px;}
 #header .cart .slide,.searchautocomplete .searchautocomplete-placeholder,
 .searchautocomplete .searchautocomplete-placeholder:before,
-#header .basic-open-close ul{right:inherit;left:0;}
+#header .basic-open-close ul,.tab-content2 .column-content .edit-icon{right:inherit;left:0;}
 .searchautocomplete .searchautocomplete-placeholder:before{left:30px;}
 #nav ol > li,#nav .featured-items .featured-products li,#footer .column,#footer .social li,.price-area .price-info,
-.faq-area.return-area .step-col li{float:right;}
+.faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li{float:right;}
 #nav .links-area .sorting-items{margin-left:15px;text-align:right;}
 #footer .column.column1{width:auto;}
 .product-detail .btn-holder button:first-child .span1{margin-left:0;margin-right:10px;}
 .products-grid .btn-holder a:first-child .span1{margin-left:0;margin-right:-10px;}
-.category--heading span:before,.shipping-methods h3 span:before, #last_most_view_title > h3 span:before{
-border-color: transparent #000 transparent #000;border-width: 30px 6px 0 0px;left:inherit;right:100%;}
+.category--heading span:before,.shipping-methods h3 span:before, #last_most_view_title > h3 span:before,.faq-area h3 span:before,
+.tab-content2 .dark-heading span:before{border-color: transparent #000 transparent #000;border-width: 30px 6px 0 0px;left:inherit;
+right:100%;}
+.faq-area h3 span:before{border-width: 22px 6px 0 0px;}
+.tab-content2 .dark-heading span:before{border-width:20px 6px 0 0px;}
 .toolbar .sort-by select, .category_top_filters .sort-by select{font-size:12px;}
 #nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question,
-.shipping-methods h3, #last_most_view_title > h3{text-align:right;}
+.shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading{text-align:right;}
+.order-details-table th:first-child{text-align:center;}
 .product-detail .price-area .availability{float:left;}
 .catalog-product-view .text-area .qty-area label{display:block;}
-#last_most_view_box_sub{direction:ltr;}
-.faq-area.return-area .step-col li{margin: 0 0% 0 2%;}
+#last_most_view_box_sub,.tshirtsize,.form-holder .btn-holder button:first-child,.tab-links{direction:ltr;}
+.faq-area.return-area .step-col li,.form-holder .form-frame{margin: 0 0% 0 2%;}
+.faq-area .faq-frame .open-close2{margin:0 0 18px 2%;}
 .faq-area .openeer-holder .question span{padding:0 7px;}
+.signup-form .row .col:first-child {margin: 0px 0% 0 2%;}
+.product-area .cancel,.product-area .edit{right:inherit;left:10%;}
+.cart-bottom-area .btn-holder a:first-child .span1,.cart-bottom-area .btn-holder a:first-child .span2{-webkit-transform: skewX(0deg);
+-moz-transform: skewX(0deg);-ms-transform: skewX(0deg);-o-transform: skewX(0deg);transform: skewX(0deg);}
+.checkout-form .form-group input, .checkout-form .inner-form select, .checkout-form .form-group select{padding-right:30px;}
+#checkout-payment-method-load .paymentradiobutton, #checkout-payment-method-load .paymentradiobuttonlabel{float:none;
+white-space:nowrap;}
