--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2950,7 +2950,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	background: #f16167;
 }
 .tab-content2{
-	color: #251709;
+	color: #000;
 	font:12px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
 .tab-content2 h2{
@@ -2982,7 +2982,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	border-style: solid;
 	border-color: #d7d7d7;
 	text-transform: uppercase;
-	color: #251709;
+	color: #000;
 	text-align: center;
 	font:bold 12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
@@ -3021,7 +3021,7 @@ div.fme-filter dd li{overflow: visible !important;}
 .tab-content2 .btn-cart{
 	display: inline-block;
 	vertical-align: top;
-	border: 1px solid #8c8764;
+	border: 1px solid transparent;
 	padding: 0 6px;
 	margin: 0 0 0 5px;
 	background: #f16167;
@@ -3079,7 +3079,7 @@ div.fme-filter dd li{overflow: visible !important;}
 }
 .tab-content2 .btn-holder a:first-child {
 	margin: 0 2px 0 0;
-	color: #251709;
+	color: #000;
 	background: #fff;
 	border-width: 0 0 0 2px;
 	border-style: solid;
@@ -3139,7 +3139,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	border: none;
 	text-align: left;
 	text-transform: uppercase;
-	color: #251709;
+	color: #000;
 	font:bold 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
 .tab-content2 .welcome-msg p{margin: 0;}
@@ -3158,7 +3158,7 @@ div.fme-filter dd li{overflow: visible !important;}
 .tab-content2 .dark-heading span{
 	display: inline-block;
 	vertical-align: bottom;
-	background: #251709;
+	background: #000;
 	padding: 0 15px;
 	position: relative;
 }
@@ -3167,7 +3167,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	height: 0;
 	border-style: solid;
 	border-width: 20px 0 0 6px;
-	border-color: transparent transparent transparent #251709;
+	border-color: transparent transparent transparent #000;
 	position: absolute;
 	top: 0;
 	left: 100%;
@@ -3192,7 +3192,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	margin: 0;
 	border-bottom: 2px solid #eee;
 	text-transform: uppercase;
-	color: #251709;
+	color: #000;
 	font:bold 12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
 .tab-content2 .column-content{
@@ -3499,7 +3499,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	text-transform: uppercase;
 }
 .three-column h3 span{
-	background: #251709;
+	background: #000;
 	display: inline-block;
 	vertical-align: bottom;
 	padding: 0 15px;
@@ -3507,7 +3507,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	min-width: 150px;
 }
 .three-column h3 span:before {
-	border-color: transparent transparent transparent #251709;
+	border-color: transparent transparent transparent #000;
 	border-style: solid;
 	border-width: 20px 0 0 6px;
 	content: "";
@@ -3711,15 +3711,15 @@ div.fme-filter dd li{overflow: visible !important;}
 	text-transform: uppercase;
 }
 .faq-area h3 span{
-	background: #251709;
+	background: #000;
 	display: inline-block;
 	vertical-align: bottom;
 	padding: 0 15px;
 	position: relative;
-	min-width: 150px;
+	/*min-width: 150px;*/
 }
 .faq-area h3 span:before {
-	border-color: transparent transparent transparent #251709;
+	border-color: transparent transparent transparent #000;
 	border-style: solid;
 	border-width: 22px 0 0 6px;
 	content: "";
